--- a/style.css
+++ b/style.css
@@ -1,338 +1,415 @@
-/* Common styles */
-body{
-    margin: 0% auto;
-    width:100%;
-    font-family: 'Poppins', sans-serif;
-}
-header{
-    background-image: url("Images/fashion-pic03.jpg");
-    background-color: #cccccc;
-    background-repeat: no-repeat, repeat;
-    background-size: cover;
-    height: 500px;
-    
-    
-}
-p,span{
-    font-family: sans-serif;
-}
-/* top banner */
-.header-container{
-    display: flex;
-    border-radius: 23px;
-}
-.greatest-show{
-    width: 50%;
-    height: 100%;
-    margin-left: 100px;
-    margin-right: 24px;
-}
-.greatest-show h2{
-    color: red;
-    padding: 0%;
-    margin: 0%;
-    margin-top: 5%;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-}
-.greatest-show h1{
-    color: white;
-    font-size: 56px;
-    left: 0px;
-    transition: 1s;
-    transition-timing-function: ease;
-    padding: 0%;
-    margin: 0%;
-}
-.greatest-show h3{
-    color: white;
-    padding: 0%;
-    margin: 0%;
-}
-.greatest-show p{
-    color: #7a1c1c;
-    font-size: 20px;
-    font-weight: 400;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.greatest-show a{
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 200;
-    padding: 16px 25px;
-    color: #ffffff;
-    border-radius: 8px;
-    background-color: #0060C1;
-    width: 120px;
-    transition: padding 1s;
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #ffffff;
 }
 
-/* =======hover trans for the first anchor====== */
-.greatest-show a:hover{
-    background-color: rgb(226, 226, 200);
-    color: #161616;
-    padding-left: 60px; ;
-    padding-right: 60px;
-    text-align: center;
-}
-.section2{
-    width: 1000px;
-    background-color: #7a1c1c;
-    border-radius: 10px;
-    text-align: center;
-    margin-left: 175px;
-    margin-top: 30px;
-    height: 250px;
-    
-    
-}
-.ul-color{
-    color: red;
-}
-.sub-v{
-    display: inline-block;
-    padding: 10%;
-}
-    
-.sub-v-h1{
-   font-size: 30px;
-   margin: 0%;
-   padding: 0%;
-    
-}
-.collection{
-    text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
-.collection-flex{
-    display: inline-block;
-    padding: 2%;
-    padding-top: 3%;
+.container {
+  width: 87%;
+  margin: 0 auto;
+  background-color: whitesmoke;
 }
-.collection-style{
-    text-decoration: none;
-    /* position: fixed; */
-}
-/* main section */
-main{
-    margin: 0%;
-}
-.blogs-container{
-    display: flex;
-    margin-left: 140px;
-    margin-right: 140px;
-    
-    
-    width: 200px;
-}
-.categories{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    background-color: #161616;
-    border-radius: 10px;
-    padding: 30px;
-    margin-right: 20px;
-    width:190px;
-    height: 150px;
-}
-.cat-opt{
-    background-color: #fff;
-    text-align: center;
-    padding: 5px 5px;
-    font-size: 15px;
-    margin-bottom: 5px;
-    border-radius: 7px;
-}
-.cat-opt a{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 100;
-    color: #161616;
-    text-decoration: none;
-}
-.red{
-    background-color: #0060C1;
-}
-#red-anc{
-    border: 0;
-    color: #fff;
-}
-.col-text-color{
-    color: #161616;
-    margin-left: 150px;
-}
-.blogs{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+/* ################ navber section start############### */
 
+/* nav logo section */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #1b1b1b;
+  color: #ffffff;
 }
-.blog{
-    width: 220px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.215);
-    padding-bottom: 20px;
-    margin: 10px;
-    margin-top: 0px;
-}
-.img-size{
-    border-image: 10px;
-    width: 200px;
-}
-.transfer-button{
-    background-color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 1px solid #161616;
-    margin-top: 4px;
-    text-align: center;
-}
-.for-padding{
-    margin-left: 20px;
-    padding-right: 12px;
-}
-.fa-message{
-    color: #1616167d;
-}
-.icon-pad{
-    padding-left: 30px;
+nav .logo {
+  text-align: center;
 }
 
-/* main section of the upcoming matches */
-
-.matches{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-column-gap: 40px;
-    grid-row-gap: 40px;
-    margin-left: 30px;
+nav .logo h1 {
+  font-weight: 800;
 }
-.match{
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.215);
-    padding: 20px;
+nav .logo h1 span {
+  color: #dc143b;
 }
-.flags {
-    display: flex;
-}
-.flag h3{
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.align{
-    text-align: center;
-}
-/* Benar Section */
-.box-sizing{
-    box-sizing: border-box;
-  }
-.container-benar {
-    padding: 50px 10px;
-    width: 100%;
-    margin: 0 auto;
-    max-width: 900px;
-    
-  }
-  
-  .image-stack {
-    display: grid;
-    position: relative;
-    width: 100%;
-    grid-template-columns: repeat(12, 1fr);
-  }
-  
-  .image-stack__item--bottom {
-    grid-column: 4 / -1;
-    grid-row: 1;
-    position: absolute;
-    right: 0;
-    top: 50px;
-    width: 90%;
-    z-index: -1;
-  }
-  
-  .image-stack__item--top {
-    padding-top: 20%;
-    grid-row: 1;
-    grid-column: 1 / span 8;
-    padding-right: 200px;
-    width: 80%;
-    
-  }
-  
-.img{
-    width: 90%;
-    height: 500px;
-    display: block;
-  }
-  .con-text{
-    width: 50%;
-  }
-/* Sub section */
-.sub-section{
-    width: 1000px;
-    background-color: #cc0d0d;
-    border-radius: 10px;
-    text-align: center;
-    margin-left: 175px;
-    margin-top: 30px;
-    margin-bottom:30px ;
-    height: 200px;
-}
-.sub-section-h1{
-    padding-top: 50px;
-    color: #cccccc;
-}
-.but-col-sub{
-  background-color: #161616;
-  color: white;
-}
-/* ===========  Footer  ========= */
-.footer-container{
-    padding: 50px;
-    background-color: #161616;
+nav .logo p {
+  font-size: x-small;
 }
 
-.footer-container h1{
-    color: rgba(255, 255, 255, 0.789);
-    text-align: center;
-    font-size: 40px;
+/* nav menu section */
+
+.menu-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
-.footer-container p{
-    color: #cccccc;
-    text-align: center;
+.menu-wrapper p {
+  color: #dc143b;
 }
-    
-.footer-item{
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
+.menu-wrapper ul {
+  display: flex;
+  align-items: center;
 }
-.footer-item a{
-    text-decoration: none;
-    color: rgba(245, 245, 245, 0.711);
+.menu-wrapper ul li {
+  list-style: none;
+  margin-right: 8px;
 }
-.footer-icon{
-    
-    text-align: center;
-    margin:10px;
-   
-    
+.menu-wrapper ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  padding: 8px 12px;
+  transition: 0.4s;
 }
-.social-icon{
-    color:rgba(245, 245, 245, 0.711);
-    margin: 10px;
+.menu-wrapper ul li a:hover {
+  background-color: #ffffff;
+  color: #8116ff;
+  border-radius: 5px;
 }
-#tab-button{
-    color: white;
-    background-color: #0060C1;
-    border: 0;
-    text-decoration: none;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-    margin-left: 40%;
-    margin-right: 40%;
-    border-radius: 8px;
-    margin-top: 0;
-    display: flex;
-    justify-content:center;
-    visibility: hidden;
+
+/* #################SALE-RIBBON-SECTION#################### */
+
+.sales-ribbon p {
+  text-align: center;
+  color: #1b1b1b;
+  background-color: #dc143b;
+}
+.sales-ribbon p code {
+  color: #ffffff;
+}
+
+/* ###################--BANNER-SECTION-START--#################### */
+.banner-section {
+}
+.banner {
+  width: 100%;
+  height: 450px;
+  background-image: url("./image/image-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 0px;
+}
+.banner-show-text {
+  width: 40%;
+  text-align: justify;
+  padding: 30px 0px 20px 30px;
+  color: #ffffff;
+  margin-left: 100px;
+}
+
+.banner-show-text h4 {
+  color: #dc143b;
+  border-bottom: 1px solid #dc143b;
+  font-weight: 2rem;
+}
+.banner-show-text h1 {
+  font-size: 40px;
+  padding-top: 20px;
+  padding-bottom: 5px;
+}
+.banner-show-text h3 {
+  font-size: 14.5px;
+}
+
+.banner-show-text p {
+  margin-top: 7px;
+  font-size: 13px;
+  text-align: justify;
+  width: 250px;
+}
+.button-div {
+  margin: 20px 0px 20px 132px;
+}
+.button-div button {
+  outline: none;
+  border: 2px solid #dc143b;
+  padding: 7px 15px;
+  background-color: #f6bac2;
+
+  color: #f7112c;
+  /* box-shadow: 1px 2px 1px 1px; */
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: 700;
+  transition: 0.3s;
+}
+.button-div button:hover {
+  box-shadow: none;
+  background-color: #dc143b;
+  color: #ffffff;
+}
+
+/* ################SUBSCRIBER-SHOW-SECTION############ */
+
+.subscriber-show {
+  background-color: #dc143b;
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #ffffff;
+  padding: 60px;
+  margin-top: 80px;
+  border-radius: 9px;
+  text-align: left;
+}
+
+/* ###################collection section#################### */
+
+.collection-wrapper {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+.collection-wrapper h1 {
+  font-size: 34px;
+}
+.collection-main {
+  display: flex;
+  grid-template-columns: repeat(1, 5fr);
+  justify-content: space-between;
+  grid-gap: 20px;
+  align-items: flex-start;
+  margin-top: 25px;
+}
+.collection-list {
+  flex-basis: 12%;
+  text-align: left;
+}
+.collection-list h4 {
+  color: #f7112c;
+  font-size: 12px;
+}
+.collection-list .collection-pra {
+  margin-top: 5px;
+}
+.collection-list .collection-pra p {
+  color: grey;
+  font-size: 11px;
+}
+
+/* ###############FASHION PIC---01 START################ */
+.fashion-pic-wrapper {
+  margin-top: 300px;
+  padding: 40px;
+  position: relative;
+  margin-left: -10px;
+}
+.fashion-pic01 img {
+  width: 50%;
+  border-radius: 5px 5px 5px 5px;
+  height: 600px;
+  left: -29%;
+}
+.fashion-pic02 img {
+  position: absolute;
+  top: -200px;
+  right: 0px;
+  width: 54%;
+  border-radius: 5px 0px 0px 5px;
+  height: 500px;
+}
+
+.fashion-pic-about {
+  position: absolute;
+  top: 360px;
+  right: 115px;
+  width: 330px;
+  text-align: justify;
+  padding: 15px;
+}
+
+.fashion-pic-about p {
+  margin-top: 15px;
+}
+
+.fashion-pic-about .pic-button {
+  margin-top: 10px;
+}
+.pic-button button {
+  padding: 4px 8px;
+  border: 2px solid #1b1b1b;
+  background-color: #ffffff;
+  cursor: pointer;
+  color: black;
+  font-weight: 800;
+}
+.pic-button button:hover {
+  border: 2px solid black;
+  background-color: #ffffff;
+  color: #1b1b1b;
+}
+
+/* #############BROWSE ITEM START############## */
+.browse-item-wrapper {
+  margin: 60px;
+}
+.browse-items {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: space-between;
+  align-items: center;
+  grid-gap: 10px;
+  padding: 30px;
+}
+.browse-item {
+  flex-basis: 22%;
+  align-items: center;
+  text-align: center;
+  background-color: #ffffff;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.4s;
+  height: 500px;
+}
+.browse-item:hover {
+  transform: translateY(-10px);
+  box-shadow: none;
+}
+.item-imge img {
+  width: 180px;
+  height: 180px;
+  border-radius: 5px;
+}
+.item-text-dtls {
+  width: 180px;
+  height: 180px;
+}
+.item-text-dtls h3 {
+}
+.item-text-dtls p {
+  text-align: justify;
+}
+.item-btn button {
+  padding: 4px 8px;
+  border: 2px solid #1b1b1b;
+  color: black;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.4s;
+  cursor: pointer;
+  margin-top: 70px;
+}
+
+/* #########fashion pic section02########### */
+
+.fashion-pic-wrapper02 {
+  margin-top: 300px;
+  padding: 40px;
+  position: relative;
+  margin-left: -10px;
+}
+.fashion-pic-wrapper02 .fashion-pic01 img {
+  width: 50%;
+  border-radius: 5px 5px 5px 5px;
+  height: 600px;
+  left: -29%;
+}
+.fashion-pic-wrapper02 .fashion-pic02 img {
+  position: absolute;
+  top: -200px;
+  right: 0px;
+  width: 54%;
+  border-radius: 5px 0px 0px 5px;
+  height: 500px;
+}
+
+.fashion-pic-wrapper02.fashion-pic-about {
+  position: absolute;
+  top: 360px;
+  right: 115px;
+  width: 330px;
+  text-align: justify;
+  padding: 15px;
+}
+
+.fashion-pic-about p {
+  margin-top: 15px;
+}
+
+.fashion-pic-about .pic-button {
+  margin-top: 10px;
+}
+.pic-button button {
+  padding: 4px 8px;
+  border: 2px solid #1b1b1b;
+  background-color: #ffffff;
+  cursor: pointer;
+  color: black;
+  font-weight: 800;
+}
+
+/*  EMAIL-SUBSCRIBE-BUTTON  */
+
+.sub-wrapper {
+  background-color: #dc143b;
+  width: 65%;
+  height: 160px;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 40px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.input-div {
+  margin-top: 10px;
+}
+.input-div input {
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+}
+#input-email {
+  width: 240px;
+  font-weight: bold;
+}
+#ssubmit {
+  cursor: pointer;
+  transition: 0.4s;
+  background-color: #1b1b1b;
+  color: #ffffff;
+}
+#ssubmit:hover {
+  background-color: gray;
+}
+
+/* #####FOOTER SECTION START##### */
+.footer-div {
+  margin-top: 50px;
+  width: 100%;
+  height: 300px;
+  background-color: #1b1b1b;
+  color: #ffffff;
+  text-align: center;
+
+  position: relative;
+}
+.footer {
+  position: absolute;
+  top: 40%;
+  left: 41%;
+}
+.footer p {
+  font-size: x-small;
+}
+.footer span {
+  color: red;
+}
+.icon-div {
+  margin-top: 10px;
+  cursor: pointer;
 }
